--- a/landing_app/templates/landingPage.html
+++ b/landing_app/templates/landingPage.html
@@ -1,17 +1,11 @@
-{% extends "base.html" %}
-{% load static %}
-{% block title %}Dukan Shehab{% endblock title %}
-
-
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block title %}Dukan Shehab{% endblock title %} {% block content %}
 <!-- Bootstrap core CSS -->
 <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
 <!-- Custom fonts for this template -->
 <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet">
 <link href="{% static 'vendor/simple-line-icons/css/simple-line-icons.css' %}" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
-    type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
 <!-- Custom styles for this template -->
 <link href="{% static 'css/landing-page.min.css' %}" rel="stylesheet">
@@ -100,30 +94,22 @@
                 <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('https://images.unsplash.com/photo-1524159731840-3490a27baedd?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ff6ea54d5483df59d17a4bca3d3ecbfc&auto=format&fit=crop&w=934&q=80');"></div>
                 <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                     <h2>Fully Responsive Design</h2>
-                    <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will
-                        look great
-                        on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+                    <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
                 </div>
             </div>
             <div class="row no-gutters">
                 <div class="col-lg-6 text-white showcase-img" style="background-image: url('https://images.unsplash.com/photo-1522771930-78848d9293e8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=df37406a3243d53022c0b3dcd46cb968&auto=format&fit=crop&w=1275&q=80');"></div>
                 <div class="col-lg-6 my-auto showcase-text">
                     <h2>Updated For Bootstrap 4</h2>
-                    <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the
-                        way in
-                        mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap
-                        4!</p>
+                    <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!
+                    </p>
                 </div>
             </div>
             <div class="row no-gutters">
                 <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('');"></div>
                 <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                     <h2>Easy to Use &amp; Customize</h2>
-                    <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand
-                        some deeper
-                        customization options. Out of the box, just add your content and images, and your new landing
-                        page will be
-                        ready to go!</p>
+                    <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
                 </div>
             </div>
         </div>
@@ -140,8 +126,9 @@
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
                     <form>
                         <div class="form-row">
+                            {% csrf_token %}
                             <div class="col-12 col-md-9 mb-2 mb-md-0">
-                                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
+                                <input type="email" name="user_email" class="form-control form-control-lg" placeholder="Enter your email...">
                             </div>
                             <div class="col-12 col-md-3">
                                 <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
